--- a/mlabs/mlabs-plutus-use-cases.cabal
+++ b/mlabs/mlabs-plutus-use-cases.cabal
@@ -49,6 +49,7 @@ library
                       DeriveAnyClass
                       DeriveGeneric StandaloneDeriving DeriveLift
                       GeneralizedNewtypeDeriving DeriveFunctor DeriveFoldable  DeriveTraversable
+                      LambdaCase
                       MonoLocalBinds
                       MultiParamTypeClasses
                       NoImplicitPrelude
