--- a/MetaLamp/lending-pool/plutus-starter.cabal
+++ b/MetaLamp/lending-pool/plutus-starter.cabal
@@ -38,6 +38,7 @@ library
       plutus-tx-plugin,
       plutus-tx,
       plutus-ledger,
+      plutus-ledger-api,
       plutus-use-cases
     hs-source-dirs: src examples/src
     default-language: Haskell2010
