Adds comments. Minor refactoring

--- a/mlabs/mlabs-plutus-use-cases.cabal
+++ b/mlabs/mlabs-plutus-use-cases.cabal
@@ -109,6 +109,7 @@ Test-suite mlabs-plutus-use-cases-tests
   hs-source-dirs:      test
   Main-is:             Main.hs
   Other-modules:       Test.Lending
+                     , Test.Utils
   default-extensions:
     RecordWildCards
     OverloadedStrings
