--- a/mlabs/mlabs-plutus-use-cases.cabal
+++ b/mlabs/mlabs-plutus-use-cases.cabal
@@ -42,7 +42,7 @@ library
   default-language: Haskell2010
   hs-source-dirs:      src/
   exposed-modules:
-        Mlabs.Lending
+--        Mlabs.Lending
         Mlabs.Lending.Contract.Coin
         Mlabs.Lending.Contract.Forge
         Mlabs.Lending.Contract.Lendex
@@ -105,6 +105,7 @@ Test-suite mlabs-plutus-use-cases-tests
   Ghc-options:         -Wall -threaded -rtsopts
   Default-Language:    Haskell2010
   Build-Depends:       base              >=4.9 && <5
+                     , data-default
                      , mlabs-plutus-use-cases
                      , containers
                      , playground-common
@@ -123,10 +124,11 @@ Test-suite mlabs-plutus-use-cases-tests
                      , text
   hs-source-dirs:      test
   Main-is:             Main.hs
-  Other-modules:       Test.Lending
+  Other-modules:
+                      -- Test.Lending
                        Test.Lending.Contract
                        Test.Lending.Logic
-                     , Test.Utils
+                       Test.Utils
   default-extensions:
     RecordWildCards
     OverloadedStrings
