implements monetary policy validation

--- a/mlabs/mlabs-plutus-use-cases.cabal
+++ b/mlabs/mlabs-plutus-use-cases.cabal
@@ -24,6 +24,7 @@ library
                      , aeson
                      , bytestring
                      , containers
+                     , extra
                      , mtl
                      , playground-common
                      , plutus-core
