Rewrite two tests to plutus unit tests

--- a/mlabs/mlabs-plutus-use-cases.cabal
+++ b/mlabs/mlabs-plutus-use-cases.cabal
@@ -107,6 +107,7 @@ Test-suite mlabs-plutus-use-cases-tests
   Default-Language:    Haskell2010
   Build-Depends:       base              >=4.9 && <5
                      , data-default
+                     , lens
                      , mlabs-plutus-use-cases
                      , containers
                      , playground-common
@@ -129,6 +130,7 @@ Test-suite mlabs-plutus-use-cases-tests
                       -- Test.Lending
                        Test.Lending.Contract
                        Test.Lending.Logic
+                       Test.Lending.Scene
                        Test.Utils
   default-extensions:
     RecordWildCards
