Completes unit tests for lendex in plutus setting

--- a/mlabs/mlabs-plutus-use-cases.cabal
+++ b/mlabs/mlabs-plutus-use-cases.cabal
@@ -129,6 +129,7 @@ Test-suite mlabs-plutus-use-cases-tests
   Other-modules:
                       -- Test.Lending
                        Test.Lending.Contract
+                       Test.Lending.Init
                        Test.Lending.Logic
                        Test.Lending.Scene
                        Test.Utils
