--- a/mlabs/mlabs-plutus-use-cases.cabal
+++ b/mlabs/mlabs-plutus-use-cases.cabal
@@ -43,13 +43,13 @@ library
   default-language: Haskell2010
   hs-source-dirs:      src/
   exposed-modules:
---        Mlabs.Lending
         Mlabs.Lending.Contract.Coin
         Mlabs.Lending.Contract.Forge
         Mlabs.Lending.Contract.Lendex
         Mlabs.Lending.Contract.Utils
-        Mlabs.Lending.Logic.App
-        Mlabs.Lending.Logic.Emulator
+        Mlabs.Lending.Logic.Emulator.App
+        Mlabs.Lending.Logic.Emulator.Blockchain
+        Mlabs.Lending.Logic.Emulator.Script
         Mlabs.Lending.Logic.InterestRate
         Mlabs.Lending.Logic.React
         Mlabs.Lending.Logic.State
@@ -129,7 +129,6 @@ Test-suite mlabs-plutus-use-cases-tests
   hs-source-dirs:      test
   Main-is:             Main.hs
   Other-modules:
-                      -- Test.Lending
                        Test.Lending.Contract
                        Test.Lending.Init
                        Test.Lending.Logic
