--- a/eleks/nft/plutus-starter.cabal
+++ b/eleks/nft/plutus-starter.cabal
@@ -77,6 +77,7 @@ executable plutus-starter-pab
   build-depends:
     base >= 4.9 && < 5,
     bytestring,
+    base64-bytestring,
     text -any,
     containers -any,
     lens -any,
