--- a/Dquadrant/stable-coin/cabal.project
+++ b/Dquadrant/stable-coin/cabal.project
@@ -1,4 +1,4 @@
-index-state: 2021-02-24T00:00:00Z
+index-state: 2021-04-13T00:00:00Z
 
 packages: ./.
 
@@ -19,20 +19,23 @@ source-repository-package
     plutus-contract
     plutus-ledger
     plutus-ledger-api
+    plutus-pab
     plutus-tx
     plutus-tx-plugin
-    plutus-pab
-    plutus-ledger-api
     plutus-use-cases
     prettyprinter-configurable
     quickcheck-dynamic
-  tag: 58bf9ed626d498c140c69a859a508da03843d097
+  tag: 476409eaee94141e2fe076a7821fc2fcdec5dfcb
 
 -- The following sections are copied from the 'plutus' repository cabal.project at the revision
 -- given above.
 -- This is necessary because the  'plutus' libraries depend on a number of other libraries which are
 -- not on Hackage, and so need to be pulled in as `source-repository-package`s themselves. Make sure to
 -- re-update this section from the template when you do an upgrade.
+
+-- This is also needed so evenful-sql-common will build with a
+-- newer version of persistent. See stack.yaml for the mirrored
+-- configuration.
 package eventful-sql-common
   ghc-options: -XDerivingStrategies -XStandaloneDeriving -XUndecidableInstances -XDataKinds -XFlexibleInstances
 
@@ -54,7 +57,10 @@ constraints:
   -- breaks eventful even more than it already was
   , persistent-template < 2.12
 
+-- See the note on nix/pkgs/default.nix:agdaPackages for why this is here.
+-- (NOTE this will change to ieee754 in newer versions of nixpkgs).
 extra-packages: ieee, filemanip
+
 
 -- Needs some patches, but upstream seems to be fairly dead (no activity in > 1 year)
 source-repository-package
@@ -71,12 +77,6 @@ source-repository-package
   type: git
   location: https://github.com/input-output-hk/cardano-crypto.git
   tag: f73079303f663e028288f9f4a9e08bcca39a923e
-
--- Needs a fix (https://github.com/wenkokke/unlit/pull/11) and a Hackage release
-source-repository-package
-  type: git
-  location: https://github.com/michaelpj/unlit.git
-  tag: 9ca1112093c5ffd356fc99c7dafa080e686dd748
 
 source-repository-package
   type: git
