Adds wireframe for MarketPlace contract

--- a/dquadrant/nft/.devcontainer/devcontainer.json
+++ b/dquadrant/nft/.devcontainer/devcontainer.json
@@ -18,6 +18,7 @@
     
     // IDs of extensions inside container
     "extensions": [
-        "haskell.haskell"
-    ],
+		"haskell.haskell",
+		"vigoo.stylish-haskell"
+	],
 }
