--- a/mlabs/mlabs-plutus-use-cases.cabal
+++ b/mlabs/mlabs-plutus-use-cases.cabal
@@ -44,6 +44,7 @@ library
                      , tasty-hunit
                      , text
                      , freer-extras
+                     , insert-ordered-containers
   default-language: Haskell2010
   hs-source-dirs:      src/
   exposed-modules:
