--- a/mlabs/mlabs-plutus-use-cases.cabal
+++ b/mlabs/mlabs-plutus-use-cases.cabal
@@ -22,6 +22,7 @@ library
   Ghc-Options:    -Wall
   build-depends:       base >=4.14 && <4.15
                      , aeson
+                     , ansi-terminal
                      , bytestring
                      , containers
                      , extra
@@ -53,6 +54,7 @@ library
         Mlabs.Data.AssocMap
         Mlabs.Data.List
         Mlabs.Data.Maybe
+        Mlabs.Data.Ray
         Mlabs.Data.Ord
         Mlabs.Emulator.App
         Mlabs.Emulator.Blockchain
@@ -73,7 +75,9 @@ library
         Mlabs.Nft.Logic.Types
         Mlabs.Nft.Contract.Nft
         Mlabs.Nft.Contract.Forge
+        Mlabs.Nft.Contract.Pab
         Mlabs.Plutus.Contract.StateMachine
+        Mlabs.System.Console.PrettyLogger
   default-extensions: BangPatterns
                       ExplicitForAll
                       FlexibleContexts
@@ -102,6 +106,7 @@ library
                       FlexibleInstances
                       TypeSynonymInstances
                       TupleSections
+                      NumericUnderscores
 
 executable mlabs-plutus-use-cases
   main-is:             app/Main.hs
@@ -121,6 +126,39 @@ executable mlabs-plutus-use-cases
                      , text
                      , freer-extras
   default-language:    Haskell2010
+
+executable nft-demo
+  main-is:             nft-demo/Main.hs
+  build-depends:       base >=4.14 && <4.15
+                     , aeson
+                     , bytestring
+                     , containers
+                     , playground-common
+                     , plutus-core
+                     , plutus-contract
+                     , plutus-ledger
+                     , plutus-ledger-api
+                     , plutus-tx
+                     , plutus-tx-plugin
+                     , plutus-pab
+                     , prettyprinter
+                     , lens
+                     , text
+                     , freer-extras
+                     , freer-simple
+                     , mlabs-plutus-use-cases
+                     , ansi-terminal
+                     , bytestring
+                     , cardano-prelude
+                     , data-default-class
+                     , lens
+                     , playground-common
+                     , prettyprinter
+                     , row-types
+                     , vector
+  default-language:    Haskell2010
+  default-extensions: AllowAmbiguousTypes BlockArguments BangPatterns ConstraintKinds DataKinds DefaultSignatures DeriveAnyClass DeriveFunctor DeriveGeneric DerivingStrategies DerivingVia DuplicateRecordFields EmptyCase ExplicitNamespaces FlexibleContexts FlexibleInstances GeneralizedNewtypeDeriving InstanceSigs LambdaCase MultiParamTypeClasses MultiWayIf NamedFieldPuns NoImplicitPrelude NumericUnderscores OverloadedLabels OverloadedStrings PatternSynonyms RecordWildCards ScopedTypeVariables StandaloneDeriving TemplateHaskell TupleSections TypeApplications TypeFamilies TypeOperators TypeSynonymInstances UndecidableInstances ViewPatterns ImportQualifiedPost RoleAnnotations
+
 
 Test-suite mlabs-plutus-use-cases-tests
   Type:                exitcode-stdio-1.0
