--- a/dquadrant/nft/plutus-tokens.cabal
+++ b/dquadrant/nft/plutus-tokens.cabal
@@ -44,7 +44,8 @@ library
       plutus-ledger,
       lens,
       text,
-      containers
+      containers,
+      utf8-string
     hs-source-dirs: src
     default-language: Haskell2010
     ghc-options:
