adds source-repository to cabal file

--- a/AltLabs/dex-token-swap/plutus-starter.cabal
+++ b/AltLabs/dex-token-swap/plutus-starter.cabal
@@ -21,6 +21,10 @@ maintainer:         Your email
 -- category:
 -- extra-source-files: CHANGELOG.md
 
+source-repository AltLabs/dex-token-swap
+    type: git
+    location: https://github.com/input-output-hk/plutus-use-cases
+
 library
     exposed-modules:
       MyModule
