--- a/AltLabs/dex-token-swap/plutus-starter.cabal
+++ b/AltLabs/dex-token-swap/plutus-starter.cabal
@@ -28,7 +28,33 @@ source-repository AltLabs/dex-token-swap
 library
     exposed-modules:
       MyModule
-      Plutus.Contracts.Game
+      Plutus.Contracts
+      Plutus.Contracts.Auction
+      Plutus.Contracts.TokenAccount
+      Plutus.Contracts.Crowdfunding
+      Plutus.Contracts.Currency
+      Plutus.Contracts.ErrorHandling
+      Plutus.Contracts.Escrow
+      Plutus.Contracts.SimpleEscrow
+      Plutus.Contracts.Future
+      Plutus.Contracts.GameStateMachine
+      Plutus.Contracts.Governance
+      Plutus.Contracts.MultiSig
+      Plutus.Contracts.MultiSigStateMachine
+      Plutus.Contracts.PingPong
+      Plutus.Contracts.Prism
+      Plutus.Contracts.Prism.Credential
+      Plutus.Contracts.Prism.CredentialManager
+      Plutus.Contracts.Prism.STO
+      Plutus.Contracts.Prism.Mirror
+      Plutus.Contracts.Prism.StateMachine
+      Plutus.Contracts.Prism.Unlock
+      Plutus.Contracts.PubKey
+      Plutus.Contracts.RPC
+      Plutus.Contracts.Stablecoin
+      Plutus.Contracts.Swap
+      Plutus.Contracts.Uniswap
+      Plutus.Contracts.Vesting
     build-depends:
       base >= 4.9 && < 5,
       aeson,
